<resources>
    <string name="app_name">HungryWolfes</string>
    <string name="home_screen_title">Delicious food for you</string>
    <string name="search">Search</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_user">User</string>
    <plurals name="results">
        <item quantity="one">Found %d result</item>
        <item quantity="other">Found %d results</item>
    </plurals>
    <string name="instructions">Instructions</string>
    <string name="ingredients">Ingredients</string>
    <string name="measure_ingredients">%s %s</string>
    <string name="my_profile">My profile</string>
    <string name="favorites">Favorites</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="my_favorites">My favorites</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">No internet Connection</string>
    <string name="check_internet_message">Your internet connection is currently not available please check or try again.</string>
    <string name="try_again">Try again</string>
    <string name="long_press">long press an item to delete</string>
    <string name="try_searching">Try searching the item with a different keyword</string>
    <string name="item_not_found">Item not found</string>
    <string name="watch_video">Watch Video</string>
</resources>