<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.searchScreen.SearchScreenFragment">

    <data class="FragmentSearchScreenBinding">

        <variable
            name="viewModel"
            type="com.example.hungrywolfes.ui.searchScreen.SearchViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:visibility="visible">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:backgroundTint="@android:color/transparent"
            android:onClick="@{()->viewModel.navigateBack()}"
            android:padding="@dimen/small_padding"
            android:src="@drawable/ic_backbutton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <SearchView
            android:id="@+id/search_meal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/grey"
            android:focusable="true"
            android:iconifiedByDefault="true"
            android:inputType="text"
            android:queryBackground="@color/grey"
            android:queryHint="@string/search"
            app:layout_constraintBottom_toBottomOf="@id/back_button"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toTopOf="@id/back_button" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            style="@style/MyCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_extra_extra_large"
            android:background="@color/text_grey"
            app:cardPreventCornerOverlap="false">

            <TextView
                android:id="@+id/results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_extra_extra_large"
                android:layout_marginTop="@dimen/margin_medium"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium_plus"
                android:textStyle="bold"
                tools:text="Found 25 results" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_searched"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_extra_large"
                android:clipChildren="false"
                android:clipToPadding="false"

                android:elevation="@dimen/elevation_max"
                android:paddingStart="@dimen/divider_size"
                android:paddingTop="@dimen/margin_medium"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="2"
                tools:itemCount="16"
                tools:listitem="@layout/item_searched_photos" />
        </com.google.android.material.card.MaterialCardView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/grey"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/internet_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_results_not_found"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/constraint_layout_result"
                app:layout_constraintStart_toStartOf="@id/constraint_layout_result"
                app:layout_constraintTop_toTopOf="@id/constraint_layout_result"
                app:layout_constraintVertical_bias="0.4" />

            <TextView
                android:id="@+id/no_internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/item_not_found"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium_plus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/internet_icon" />

            <TextView
                android:id="@+id/message_internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="@dimen/margin_extra_extra_large"
                android:paddingEnd="@dimen/margin_extra_extra_large"
                android:text="@string/try_searching"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintEnd_toEndOf="@id/no_internet"
                app:layout_constraintStart_toStartOf="@+id/no_internet"
                app:layout_constraintTop_toBottomOf="@+id/no_internet" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>