<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.profileScreen.UserFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.hungrywolfes.ui.profileScreen.UserViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:backgroundTint="@android:color/transparent"
            android:onClick="@{()->viewModel.navigateBack()}"
            android:padding="@dimen/small_padding"
            android:src="@drawable/ic_backbutton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/my_profile"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:layout_marginEnd="@dimen/margin_large"
            app:cardCornerRadius="@dimen/card_radius_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title">

            <ImageView
                android:id="@+id/image_wolfpack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_medium"
                android:background="@drawable/wolfpacklogo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margin_large_plus"
                android:layout_marginTop="@dimen/margin_large"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.userData.name}"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.userData.address}"
                    android:textColor="@color/text_grey" />

                <View
                    android:id="@+id/line"
                    android:layout_width="@dimen/view_large"
                    android:layout_height="0.3dp"
                    android:background="@color/text_grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.userData.telephone_number}"
                    android:textColor="@color/text_grey" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:backgroundTint="@color/white"
            android:onClick="@{()->viewModel.navigateToFragments()}"
            app:cardCornerRadius="@dimen/card_radius_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_extra_small"
                android:paddingStart="@dimen/margin_large"
                android:paddingEnd="@dimen/margin_large"
                android:text="@string/favorites"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium_large"
                app:drawableEndCompat="@drawable/arrow" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_conditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginEnd="@dimen/margin_large"
            android:backgroundTint="@color/white"
            android:onClick="@{()->viewModel.navigateToTermsAndConditions()}"
            app:cardCornerRadius="@dimen/card_radius_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card_view_favorites">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:padding="@dimen/padding_extra_small"
                android:paddingStart="@dimen/margin_large"
                android:paddingEnd="@dimen/margin_large"
                android:text="@string/terms_and_conditions"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_medium_large"
                app:drawableEndCompat="@drawable/arrow" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>